--- a/app/src/main/res/menu/activity_home_page_drawer.xml
+++ b/app/src/main/res/menu/activity_home_page_drawer.xml
@@ -15,12 +15,16 @@
             android:icon="@drawable/ic_drawer_wallet"
             android:title="@string/drawer_wallet" />
         <item
-            android:id="@+id/nav_backup"
-            android:icon="@drawable/ic_drawer_backup"
-            android:title="@string/drawer_backup" />
+            android:id="@+id/nav_categories"
+            android:icon="@drawable/ic_drawer_wallet"
+            android:title="@string/drawer_categories" />
     </group>
     <item android:title="@string/drawer_other">
         <menu>
+            <item
+                android:id="@+id/nav_backup"
+                android:icon="@drawable/ic_drawer_backup"
+                android:title="@string/drawer_backup" />
             <item
                 android:id="@+id/nav_settings"
                 android:icon="@drawable/ic_drawer_setting"
