--- a/app/src/main/res/layout/content_home_page.xml
+++ b/app/src/main/res/layout/content_home_page.xml
@@ -9,7 +9,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.example.changzhenjie.mynote.activity.HomePageActivity"
+    tools:context=".homepage.HomePageActivity"
     tools:showIn="@layout/app_bar_home_page">
 
 </RelativeLayout>
