--- a/app/src/main/res/layout/content_payments.xml
+++ b/app/src/main/res/layout/content_payments.xml
@@ -9,7 +9,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.example.changzhenjie.mynote.categories.CategoriesActivity"
-    tools:showIn="@layout/app_bar_categories">
+    tools:context="com.example.changzhenjie.mynote.paymentbalance.PaymentsActivity"
+    tools:showIn="@layout/app_bar_payments">
 
 </RelativeLayout>
