--- a/app/src/main/res/values/drawables.xml
+++ b/app/src/main/res/values/drawables.xml
@@ -8,9 +8,10 @@
     <item name="ic_menu_add" type="drawable">@mipmap/ic_add_white_48dp</item>
     <item name="ic_menu_create" type="drawable">@mipmap/ic_create_white_48dp</item>
     <item name="ic_drawer_home" type="drawable">@mipmap/ic_home_black_48dp</item>
-    <item name="ic_drawer_wallet" type="drawable">@mipmap/ic_account_balance_wallet_black_48dp</item>
-    <item name="ic_drawer_payment" type="drawable">@mipmap/ic_payment_black_48dp</item>
+    <item name="ic_drawer_wallet" type="drawable">@mipmap/ic_payment_black_48dp</item>
+    <item name="ic_drawer_payment" type="drawable">@mipmap/ic_receipt_black_48dp</item>
     <item name="ic_drawer_setting" type="drawable">@mipmap/ic_settings_black_48dp</item>
     <item name="ic_drawer_about" type="drawable">@mipmap/ic_info_outline_black_48dp</item>
     <item name="ic_drawer_backup" type="drawable">@mipmap/ic_save_black_48dp</item>
+    <item name="ic_drawer_categories" type="drawable">@mipmap/ic_format_list_numbered_black_48dp</item>
 </resources>
