--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,8 @@
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="nav_header_height">200dp</dimen>
     <dimen name="nav_header_vertical_spacing">16dp</dimen>
+
+    <dimen name="tile_letter_font_size">24dp</dimen>
+    <dimen name="tile_letter_font_size_small">16dp</dimen>
+    <dimen name="avatar_border_width">1dp</dimen>
 </resources>
