--- a/app/src/main/res/layout/content_add_category.xml
+++ b/app/src/main/res/layout/content_add_category.xml
@@ -1,19 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".homepage.HomePageActivity"
-    tools:showIn="@layout/app_bar_home_page">
+    tools:context="com.example.changzhenjie.mynote.categories.AddCategoryActivity"
+    tools:showIn="@layout/activity_add_category">
 
-    <ImageView
-        android:id="@+id/titlecontact"
-        android:layout_width="50dp"
-        android:layout_height="50dp" />
-</RelativeLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+    </LinearLayout>
+</LinearLayout>
