--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#009688</color>
-    <color name="colorPrimaryDark">#00796B</color>
-    <color name="colorAccent">#FF5722</color>
-    <color name="colorPrimaryLight">#B2DFDB</color>
+    <color name="colorPrimary">#03A9F4</color>
+    <color name="colorPrimaryDark">#0288D1</color>
+    <color name="colorAccent">#E040FB</color>
+    <color name="colorPrimaryLight">#B3E5FC</color>
     <color name="colorPrimaryText">#212121</color>
     <color name="colorSecontText">#727272</color>
     <color name="colorDivider">#B6B6B6</color>
@@ -40,4 +40,7 @@
         <item>#1874CD</item>
         <item>#104E8B</item>
     </array>
+
+    <!-- Color of the separator between entries in an ExpandingEntryCardView -->
+    <color name="expanding_entry_card_item_separator_color">#e4e4e4</color>
 </resources>
