--- a/app/src/main/res/layout/app_bar_categories.xml
+++ b/app/src/main/res/layout/app_bar_categories.xml
@@ -8,6 +8,7 @@
     tools:context="com.example.changzhenjie.mynote.categories.CategoriesActivity">
 
     <android.support.design.widget.AppBarLayout
+        android:id="@+id/app_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:theme="@style/AppTheme.AppBarOverlay">
@@ -22,7 +23,7 @@
 
         <android.support.design.widget.TabLayout
             android:id="@+id/paments_tablayout"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"></android.support.design.widget.TabLayout>
 
     </android.support.design.widget.AppBarLayout>
@@ -33,5 +34,13 @@
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/fab_margin"
+        android:src="@drawable/ic_menu_add"
+        app:layout_anchor="@id/app_bar"
+        app:layout_anchorGravity="bottom|end" />
 
 </android.support.design.widget.CoordinatorLayout>
